2015-10-28  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-sim.h: Add prototype for halt_on_inactive.
	* epiphany.c (epiphany_halt_on_inactive): Add.
	* mloop.in (full-exec-scache): Rename from old_vpc to prev_vpc.
	Halt simulation if core becomes inactive in user environment mode.
	* oob-events.c (halt_on_excause): Add.
	(halt_on_interrupt): Add.
	(interrupt_handler): Add prev_vpc argument.
	(inline IADDR epiphany_handle_oob_events): Add prev_vpc argument.
	* oob-events.h: Adjust halt_on_interrupt and interrupt_handler
	prototypes.
	* sim-if.c (sim_create_inferior): Depending on simulation environment:
	start with setting caibit in USER_ENVIRONMENT, in VIRTUAL_ENVIRONMENT
	start by triggering SYNC interrupt, do nothing in
	OPERATING_ENVIRONMENT.

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* mloop.in: Only print esim status messages in verbose mode.
	* sim-if.c (sim_esim_init): Likewise.

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (options_epiphany): Show default values in help text.

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (sim_esim_have_required_params): Provide default values for
	num_rows, num_cols and coreid if none are specified.

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim-int.h (es_state): Add session_name member.
	* esim/esim.c (es_init_impl): Add session_name parameter.
	(es_init): Likewise.
	(es_client_connect): Likewise.
	* esim/esim.h (es_init): Update prototype.
	(es_client_connect): Update prototype.
	* sim-if.c (EPIPHANY_OPTIONS): Add E_OPTION_SESSION_NAME enum.
	(emesh_params): Rename mesh_add_ext_ram from epiphany_add_ext_ram,
	change to uint64_t type. Add session_name member.
	(epiphany_option_handler): Add null check for arg. Add case for
	E_OPTION_SESSION_NAME.
	(sim_esim_have_required_params): Fix help strings for
	--e-num-cols and --e-num-rows.
	(sim_esim_params_from_xml): Likewise.
	(sim_esim_init): Fix setting ext_ram_base.